[gd_scene load_steps=2 format=3 uid="uid://bye6xjracbtam"]

[ext_resource type="Script" path="res://scripts/chess/square.gd" id="1_qw4qx"]

[node name="Square" type="ColorRect"]
custom_minimum_size = Vector2(250, 250)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
color = Color(0.952941, 0.921569, 0.843137, 1)
script = ExtResource("1_qw4qx")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
